test_data/5_bad_ingress.json
{
  "apiVersion": "networking.k8s.io/v1beta1",
  "kind": "Ingress",
  "metadata": {
    "annotations": {
      "kubernetes.io/ingress.class": "public",
      "nginx.ingress.kubernetes.io/affinity": "cookie",
      "nginx.ingress.kubernetes.io/ssl-redirect": "false",
      "nginx.ingress.kubernetes.io/rewrite-target": "/"
    },
    "labels": {
      "app.kubernetes.io/instance": "kelp",
      "app.kubernetes.io/managed-by": "Tiller",
      "app.kubernetes.io/name": "test-ingress",
      "app.kubernetes.io/part-of": "kubernetes-tools",
      "app.kubernetes.io/version": "0.0.3",
      "helm.sh/chart": "kelp-0.0.3",
      "monitoring.nanthealth.com/application": "kelp",
      "monitoring.nanthealth.com/owner": "Kubernetes-Team",
      "monitoring.nanthealth.com/service": "platform"
    },
    "name": "pod1-example",
    "namespace": "default"
  },
  "spec": {
    "rules": [
      {
        "host": "dtkt.navimedix.com",
        "http": {
          "paths": []
        }
      },
      {
        "host": "dtkt1.navimedix.com",
        "http": {
          "paths": []
        }
      }
    ]
  }
}
