test_data/6_full_admission_review.json
{
  "apiVersion": "admission.k8s.io/v1",
  "kind": "AdmissionReview",
  "request": {
    "dryRun": false,
    "kind": {
      "kind": "Ingress",
      "group": "apps",
      "version": "v1"
    },
    "name": "ingresses",
    "namespace": "default",
    "object": {
      "apiVersion": "networking.k8s.io/v1beta1",
      "kind": "Ingress",
      "metadata": {
        "annotations": {
          "kubernetes.io/ingress.class": "public",
          "nginx.ingress.kubernetes.io/affinity": "cookie",
          "nginx.ingress.kubernetes.io/ssl-redirect": "false",
          "nginx.ingress.kubernetes.io/rewrite-target": "/"
        },
        "labels": {
          "app.kubernetes.io/instance": "kelp",
          "app.kubernetes.io/managed-by": "Tiller",
          "app.kubernetes.io/name": "test-ingress",
          "app.kubernetes.io/part-of": "kubernetes-tools",
          "app.kubernetes.io/version": "0.0.3",
          "helm.sh/chart": "kelp-0.0.3",
          "monitoring.nanthealth.com/application": "kelp",
          "monitoring.nanthealth.com/owner": "Kubernetes-Team",
          "monitoring.nanthealth.com/service": "platform"
        },
        "name": "pod1-example",
        "namespace": "default"
      },
      "spec": {
        "rules": [
          {
            "host": "dtkt.navimedix.com",
            "http": {
              "paths": [
                {
                  "backend": {
                    "serviceName": "kelp-kelp-svc",
                    "servicePort": "http"
                  },
                  "path": "/kelp"
                }
              ]
            }
          },
          {
            "host": "dtkt1.navimedix.com",
            "http": {
              "paths": [
                {
                  "backend": {
                    "serviceName": "kelp-kelp-svc",
                    "servicePort": "http"
                  },
                  "path": "/kelp"
                }
              ]
            }
          }
        ]
      }
    },
    "operation": "CREATE",
    "requestKind": {
      "kind": "Ingress",
      "group": "apps",
      "version": "v1"
    },
    "requestResource": {
      "group": "apps",
      "resource": "ingresses",
      "version": "v1"
    },
    "resource": {
      "group": "apps",
      "resource": "ingresses",
      "version": "v1"
    },
    "uid": "123",
    "userInfo": {
      "groups": [
        "system:masters",
        "system:authenticated"
      ],
      "uid": "123",
      "username": "kubernetes-admin"
    }
  }
}
