test_data/ingress_creation.json
{
  "kind": {
    "group": "networking.k8s.io",
    "kind": "Ingress",
    "version": "v1beta1"
  },
  "object": {
    "metadata": {
      "name": "prod",
      "annotations": {
        "kubernetes.io/ingress.class": "internal"
      }
    },
    "spec": {
      "rules": [
        {
          "host": "some-host.com",
          "http": {
            "paths": [
              {
                "path": "/",
                "backend": {
                  "serviceName": "service",
                  "servicePort": "443"
                }
              }
            ]
          }
        }
      ]
    }
  }
}
