test_data/review_example.json
{
  "uid": "1299d386-525b-4032-98ae-1949f69f9cfc",
  "kind": {
    "group": "",
    "version": "v1",
    "kind": "Pod"
  },
  "resource": {
    "group": "",
    "version": "v1",
    "resource": "pods"
  },
  "requestKind": {
    "group": "",
    "version": "v1",
    "kind": "Pod"
  },
  "requestResource": {
    "group": "",
    "version": "v1",
    "resource": "pods"
  },
  "name": "nginx",
  "namespace": "default",
  "operation": "CREATE",
  "userInfo": {
    "username": "kubernetes-admin",
    "groups": [
      "system:masters",
      "system:authenticated"
    ]
  },
  "object": {
    "apiVersion": "extensions/v1beta1",
    "kind": "Ingress",
    "metadata": {
      "annotations": {
        "kubernetes.io/ingress.class": "internal"
      },
      "name": "pod1-example",
      "namespace": "default"
    },
    "spec": {
      "rules": [
        {
          "host": "dtkt.navimedix.com",
          "http": {
            "paths": [
              {
                "backend": {
                  "serviceName": "kelp-kelp-svc",
                  "servicePort": "http"
                },
                "path": "/kelp"
              }
            ]
          }
        },
        {
          "host": "dtkt1.navimedix.com",
          "http": {
            "paths": [
              {
                "backend": {
                  "serviceName": "kelp-kelp-svc",
                  "servicePort": "http"
                },
                "path": "/kelp"
              }
            ]
          }
        }
      ]
    }
  },
  "oldObject": null,
  "dryRun": false,
  "options": {
    "kind": "CreateOptions",
    "apiVersion": "meta.k8s.io/v1"
  }
}
