test_data/simple_ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: pod1-example
  namespace: kubewarden
  annotations:
    kubernetes.io/ingress.class: internal
spec:
  rules:
    - host: some.host.com
      http:
        paths:
          - path: "/app"
            backend:
              serviceName: some-svc
              servicePort: http
